--- a/content/posts/2025/知识整合笔记（高一下学期第一期）.md
+++ b/content/posts/2025/知识整合笔记（高一下学期第一期）.md
@@ -5,10 +5,8 @@ date: 2025-05-03 18:30:35
 updated: 2025-05-03 18:30:35
 # image: 
 # type: story
-categories: [study]
-tags: [笔记]
-mathjax: true
-katex: true
+categories: []
+tags: []
 ---
 
 # 化学
