--- a/content/posts/2025/高一下学期第一次作文：定力·活力·魅力.md
+++ b/content/posts/2025/高一下学期第一次作文：定力·活力·魅力.md
@@ -5,8 +5,8 @@ date: 2025-05-03 18:28:53
 updated: 2025-05-03 18:28:53
 image: https://cdn.pixabay.com/photo/2024/11/18/10/20/businessman-9205819_640.png
 type: story
-categories: [study]
-tags: [写作]
+categories: []
+tags: []
 
 ---
 
