--- a/content/posts/2025/高一下知识点整理·第二期.md
+++ b/content/posts/2025/高一下知识点整理·第二期.md
@@ -5,10 +5,8 @@ date: 2025-05-03 18:32:41
 updated: 2025-05-03 18:32:41
 #image: 
 type: story
-categories: [学习]
-tags: [study]
-mathjax: true
-katex: true
+categories: []
+tags: []
 ---
 
 ### **一、化学**
