--- a/content/posts/2025/高一下学期第一次简报.md
+++ b/content/posts/2025/高一下学期第一次简报.md
@@ -5,8 +5,8 @@ date: 2025-05-03 18:25:06
 updated: 2025-05-03 18:25:06
 image: https://cdn.pixabay.com/photo/2015/11/19/21/10/glasses-1052010_640.jpg
 type: story
-categories: [study]
-tags: [study]
+categories: []
+tags: []
 
 
 ---
